# pactl-set-volume - a small program for testing. (C)2018 J. Lemmens

AUTOMAKE_OPTIONS = foreign

SUBDIRS = src

ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = ABOUT-NLS aclocal.m4 am ar-lib autom4te.cache CHANGES \
             compile config.guess config.h config.h.in config.status \
             config.sub configure configure.ac COPYING COPYRIGHT \
             CREDITS depcomp INSTALL install-sh m4 Makefile.am \
             Makefile.in mdate-sh missing mkinstalldirs py-compile \
             README test-driver texinfo.tex TODO VERSION ylwrap
